force-app/main/default/objects/PgM_Status_Summary__c/PgM_Status_Summary__c.object-meta.xml
<CustomObject>
    <label>Status Summary</label>
    <nameField>
        <label>Status Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Status Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>