force-app/main/default/objects/PgM_Status_Summary__c/fields/PgM_Accomplishments__c.field-meta.xml
<CustomField>
    <fullName>PgM_Accomplishments__c</fullName>
    <label>Accomplishments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>