force-app/main/default/objects/PgM_Status_Summary__c/fields/PgM_Budget_Reason__c.field-meta.xml
<CustomField>
    <fullName>PgM_Budget_Reason__c</fullName>
    <label>Budget Reason</label>
    <type>TextArea</type>
</CustomField>