force-app/main/default/objects/PgM_Status_Summary__c/fields/PgM_Key_Milestones__c.field-meta.xml
<CustomField>
    <fullName>PgM_Key_Milestones__c</fullName>
    <label>Key Milestones</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>