force-app/main/default/objects/PgM_Status_Summary__c/fields/PgM_Month_Ending__c.field-meta.xml
<CustomField>
    <fullName>PgM_Month_Ending__c</fullName>
    <defaultValue>IF( MONTH( TODAY() ) = 12, 
DATE( YEAR( TODAY() ), 12, 31 ), 
DATE( YEAR( TODAY() ), MONTH( TODAY() ) + 1, 1) - 1)</defaultValue>
    <label>Month Ending</label>
    <type>Date</type>
</CustomField>