force-app/main/default/objects/PgM_Status_Summary__c/fields/PgM_Plans_for_Next_Month__c.field-meta.xml
<CustomField>
    <fullName>PgM_Plans_for_Next_Month__c</fullName>
    <label>Plans for Next Month</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>