force-app/main/default/objects/PgM_Status_Summary__c/fields/PgM_Resources__c.field-meta.xml
<CustomField>
    <fullName>PgM_Resources__c</fullName>
    <label>Resources</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PgM_RAG</valueSetName>
    </valueSet>
</CustomField>