force-app/main/default/objects/PgM_Status_Summary__c/fields/PgM_Resources_Indicator__c.field-meta.xml
<CustomField>
    <fullName>PgM_Resources_Indicator__c</fullName>
    <formula>CASE(TEXT(PgM_Resources__c),
&quot;1&quot;, IMAGE(&quot;/resource/PgM_Green_Indicator&quot;,&quot;Green&quot;),
&quot;2&quot;, IMAGE(&quot;/resource/PgM_Green_Indicator&quot;,&quot;Green&quot;),
&quot;3&quot;, IMAGE(&quot;/resource/PgM_Green_Indicator&quot;,&quot;Green&quot;),
&quot;4&quot;, IMAGE(&quot;/resource/PgM_Amber_Indicator&quot;,&quot;Yellow&quot;),
&quot;5&quot;, IMAGE(&quot;/resource/PgM_Amber_Indicator&quot;,&quot;Yellow&quot;),
&quot;6&quot;, IMAGE(&quot;/resource/PgM_Amber_Indicator&quot;,&quot;Yellow&quot;),
&quot;7&quot;, IMAGE(&quot;/resource/PgM_Amber_Indicator&quot;,&quot;Yellow&quot;),
&quot;8&quot;, IMAGE(&quot;/resource/PgM_Red_Indicator&quot;,&quot;Red&quot;),
&quot;9&quot;, IMAGE(&quot;/resource/PgM_Red_Indicator&quot;,&quot;Red&quot;),
&quot;10&quot;, IMAGE(&quot;/resource/PgM_Red_Indicator&quot;,&quot;Red&quot;),
&quot;Not Found&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resources</label>
    <type>Text</type>
</CustomField>