force-app/main/default/objects/PgM_Status_Summary__c/fields/PgM_Resources_Reason__c.field-meta.xml
<CustomField>
    <fullName>PgM_Resources_Reason__c</fullName>
    <label>Resources Reason</label>
    <type>TextArea</type>
</CustomField>