force-app/main/default/objects/PgM_Status_Summary__c/fields/PgM_Schedule_Reason__c.field-meta.xml
<CustomField>
    <fullName>PgM_Schedule_Reason__c</fullName>
    <label>Schedule Reason</label>
    <type>TextArea</type>
</CustomField>