force-app/main/default/objects/PgM_Status_Summary__c/fields/PgM_Scope__c.field-meta.xml
<CustomField>
    <fullName>PgM_Scope__c</fullName>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PgM_RAG</valueSetName>
    </valueSet>
</CustomField>