force-app/main/default/objects/PgM_Status_Summary__c/fields/PgM_Scope_Reason__c.field-meta.xml
<CustomField>
    <fullName>PgM_Scope_Reason__c</fullName>
    <label>Scope Reason</label>
    <type>TextArea</type>
</CustomField>