force-app/main/default/objects/PgM_Status_Summary__c/fields/PgM_Submitter__c.field-meta.xml
<CustomField>
    <fullName>PgM_Submitter__c</fullName>
    <label>Submitter</label>
    <type>Email</type>
</CustomField>