force-app/main/default/objects/PgM_Status_Summary__c/fields/PgM_Summary__c.field-meta.xml
<CustomField>
    <fullName>PgM_Summary__c</fullName>
    <label>Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>