force-app/main/default/objects/PgM_Status_Summary__c/fields/PgM_Trending_Indicator__c.field-meta.xml
<CustomField>
    <fullName>PgM_Trending_Indicator__c</fullName>
    <formula>CASE(TEXT(PgM_Trending__c),
&quot;Up&quot;, IMAGE(&quot;/resource/PgM_Up_Indicator&quot;,&quot;Up&quot;),
&quot;Down&quot;, IMAGE(&quot;/resource/PgM_Down_Indicator&quot;,&quot;Down&quot;),
&quot;Stable&quot;, IMAGE(&quot;/resource/PgM_Stable_Indicator&quot;,&quot;Stable&quot;),
&quot;Not Found&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trending</label>
    <type>Text</type>
</CustomField>