force-app/main/default/objects/PgM_Status_Summary__c/fields/PgM_Week_Ending_Match__c.field-meta.xml
<CustomField>
    <fullName>PgM_Week_Ending_Match__c</fullName>
    <label>Week Ending Match</label>
    <length>40</length>
    <type>Text</type>
</CustomField>