force-app/main/default/objects/PgM_Status_Summary__c/recordTypes/PgM_Weekly.recordType-meta.xml
<RecordType>
    <fullName>PgM_Weekly</fullName>
    <active>true</active>
    <label>Weekly</label>
</RecordType>