force-app/main/default/objects/PgM_Status_Summary__c/validationRules/Budget_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Budget_Reason</fullName>
    <active>false</active>
    <description>Budget rating is Yellow or Red</description>
    <errorConditionFormula>value(text(PgM_Budget__c)) &gt; 3  &amp;&amp;
ISBLANK( PgM_Budget_Reason__c )</errorConditionFormula>
    <errorDisplayField>PgM_Budget_Reason__c</errorDisplayField>
    <errorMessage>Reason is required when the Budget Rating is Yellow or Red.</errorMessage>
</ValidationRule>