force-app/main/default/objects/PgM_Status_Summary__c/validationRules/Resource_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Resource_Reason</fullName>
    <active>true</active>
    <description>Resources are Yellow or Red</description>
    <errorConditionFormula>value(text(PgM_Resources__c)) &gt; 3 &amp;&amp;
ISBLANK( PgM_Resources_Reason__c )</errorConditionFormula>
    <errorDisplayField>PgM_Resources_Reason__c</errorDisplayField>
    <errorMessage>Reason is required when the Resources Rating is Yellow or Red.</errorMessage>
</ValidationRule>