force-app/main/default/objects/PgM_Status_Summary__c/validationRules/Schedule_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Schedule_Reason</fullName>
    <active>true</active>
    <description>Schedule is Yellow or Red.</description>
    <errorConditionFormula>value(text(PgM_Schedule__c)) &gt; 3 &amp;&amp;
ISBLANK( PgM_Schedule_Reason__c )</errorConditionFormula>
    <errorDisplayField>PgM_Schedule_Reason__c</errorDisplayField>
    <errorMessage>Reason is required when the Schedule Rating is Yellow or Red.</errorMessage>
</ValidationRule>