force-app/main/default/objects/PgM_Status_Summary__c/validationRules/Scope_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Scope_Reason</fullName>
    <active>true</active>
    <description>Scope is Yellow or Red</description>
    <errorConditionFormula>value(text(PgM_Scope__c)) &gt; 3 &amp;&amp;
ISBLANK( PgM_Scope_Reason__c )</errorConditionFormula>
    <errorDisplayField>PgM_Scope_Reason__c</errorDisplayField>
    <errorMessage>Reason is required when the Scope Rating is Yellow or Red.</errorMessage>
</ValidationRule>