force-app/main/default/objects/PgM_Status_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>PgM_Week_Ending__c</columns>
    <columns>PgM_Month_Ending__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>