force-app/main/default/objects/PgM_Status_Summary__c/listViews/Weekly_Summaries.listView-meta.xml
<ListView>
    <fullName>Weekly_Summaries</fullName>
    <columns>NAME</columns>
    <columns>PgM_Week_Ending__c</columns>
    <columns>PgM_Program__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PgM_Status_Summary__c.PgM_Weekly</value>
    </filters>
    <label>Weekly Summaries</label>
</ListView>